--- a/Sema/Game.storyboard
+++ b/Sema/Game.storyboard
@@ -407,16 +407,6 @@
             </objects>
             <point key="canvasLocation" x="2333" y="-2522"/>
         </scene>
-        <!--Page View Controller-->
-        <scene sceneID="NiN-rv-Kxn">
-            <objects>
-                <pageViewController storyboardIdentifier="GameView" autoresizesArchivedViewToFullSize="NO" transitionStyle="pageCurl" navigationOrientation="horizontal" spineLocation="min" id="Kmc-HH-TWL" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="pg1-mq-jbH"/>
-                </pageViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="bvX-we-Nnt" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="3745" y="413"/>
-        </scene>
         <!--Add Friend View Controller-->
         <scene sceneID="asf-w6-Vcp">
             <objects>
@@ -616,10 +606,10 @@
             </objects>
             <point key="canvasLocation" x="1689" y="-2522"/>
         </scene>
-        <!--View Controller-->
+        <!--Game Menu View Controller-->
         <scene sceneID="lC3-z6-8a2">
             <objects>
-                <viewController id="8CD-q3-gKn" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="GameMenu" id="8CD-q3-gKn" customClass="SEGameMenuViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="P85-8d-M2G"/>
                         <viewControllerLayoutGuide type="bottom" id="3kc-O4-kY2"/>
@@ -628,55 +618,70 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SSo-Vs-DRH">
-                                <rect key="frame" x="255" y="160" width="55" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SSo-Vs-DRH">
+                                <rect key="frame" x="24" y="100" width="552" height="30"/>
                                 <state key="normal" title="Odbierz"/>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tcd-as-yjg">
-                                <rect key="frame" x="253" y="241" width="40" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tcd-as-yjg">
+                                <rect key="frame" x="24" y="146" width="552" height="30"/>
                                 <state key="normal" title="Wyślij"/>
+                                <connections>
+                                    <action selector="chooseWhoToSendAction:" destination="8CD-q3-gKn" eventType="touchUpInside" id="cPp-iU-jKj"/>
+                                </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dUV-44-yYK">
-                                <rect key="frame" x="251" y="341" width="45" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dUV-44-yYK">
+                                <rect key="frame" x="24" y="192" width="552" height="30"/>
                                 <state key="normal" title="Opuść"/>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="tcd-as-yjg" firstAttribute="top" secondItem="SSo-Vs-DRH" secondAttribute="bottom" constant="51" id="0fc-63-Vkt"/>
-                            <constraint firstItem="dUV-44-yYK" firstAttribute="top" secondItem="tcd-as-yjg" secondAttribute="bottom" constant="70" id="1Uq-IR-70k"/>
-                            <constraint firstItem="SSo-Vs-DRH" firstAttribute="leading" secondItem="T0U-Fx-9A6" secondAttribute="leading" constant="259" id="9PA-kk-72b"/>
-                            <constraint firstAttribute="trailing" secondItem="dUV-44-yYK" secondAttribute="trailing" constant="304" id="Ayi-xn-wsj"/>
-                            <constraint firstItem="dUV-44-yYK" firstAttribute="leading" secondItem="T0U-Fx-9A6" secondAttribute="leading" constant="250" id="CHP-gB-xVa"/>
-                            <constraint firstAttribute="trailing" secondItem="tcd-as-yjg" secondAttribute="trailing" constant="304" id="II2-Ky-EHI"/>
-                            <constraint firstItem="SSo-Vs-DRH" firstAttribute="top" secondItem="T0U-Fx-9A6" secondAttribute="topMargin" constant="160" id="bar-IG-Di1"/>
-                            <constraint firstAttribute="trailing" secondItem="SSo-Vs-DRH" secondAttribute="trailing" constant="295" id="dYH-6n-SC4"/>
-                            <constraint firstItem="tcd-as-yjg" firstAttribute="leading" secondItem="T0U-Fx-9A6" secondAttribute="leading" constant="250" id="pBm-6X-dVx"/>
+                            <constraint firstItem="tcd-as-yjg" firstAttribute="top" secondItem="SSo-Vs-DRH" secondAttribute="bottom" constant="16" id="0fc-63-Vkt"/>
+                            <constraint firstItem="dUV-44-yYK" firstAttribute="top" secondItem="tcd-as-yjg" secondAttribute="bottom" constant="16" id="1Uq-IR-70k"/>
+                            <constraint firstItem="SSo-Vs-DRH" firstAttribute="leading" secondItem="T0U-Fx-9A6" secondAttribute="leading" constant="24" id="9PA-kk-72b"/>
+                            <constraint firstAttribute="trailing" secondItem="dUV-44-yYK" secondAttribute="trailing" constant="24" id="Ayi-xn-wsj"/>
+                            <constraint firstItem="dUV-44-yYK" firstAttribute="leading" secondItem="T0U-Fx-9A6" secondAttribute="leading" constant="24" id="CHP-gB-xVa"/>
+                            <constraint firstAttribute="trailing" secondItem="tcd-as-yjg" secondAttribute="trailing" constant="24" id="II2-Ky-EHI"/>
+                            <constraint firstItem="SSo-Vs-DRH" firstAttribute="top" secondItem="T0U-Fx-9A6" secondAttribute="topMargin" constant="100" id="bar-IG-Di1"/>
+                            <constraint firstAttribute="trailing" secondItem="SSo-Vs-DRH" secondAttribute="trailing" constant="24" id="dYH-6n-SC4"/>
+                            <constraint firstItem="tcd-as-yjg" firstAttribute="leading" secondItem="T0U-Fx-9A6" secondAttribute="leading" constant="24" id="pBm-6X-dVx"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="fq3-bN-iDc"/>
+                    <navigationItem key="navigationItem" id="fq3-bN-iDc">
+                        <barButtonItem key="backBarButtonItem" title="Wróć" id="WAx-hw-X2x"/>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6zQ-9q-Se5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1856" y="-1638"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="xwj-gG-hIQ">
+        <!--Choose Who To Send Table View Controller-->
+        <scene sceneID="9CF-t0-iQk">
             <objects>
-                <navigationController storyboardIdentifier="GameView" automaticallyAdjustsScrollViewInsets="NO" id="DlK-zZ-kz5" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="H71-Zv-xsL">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="Kmc-HH-TWL" kind="relationship" relationship="rootViewController" id="lCd-lc-05Z"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="eLy-j9-roj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tableViewController storyboardIdentifier="ChooseWhoToSend" id="8XU-ow-yCL" customClass="SEChooseWhoToSendTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="qTn-ET-Ikn">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="FvK-Ja-LOW">
+                                <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="FvK-Ja-LOW" id="Csn-8g-N5m">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="8XU-ow-yCL" id="tH1-Pz-3AM"/>
+                            <outlet property="delegate" destination="8XU-ow-yCL" id="wyp-Di-L7B"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wk5-oN-0dn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2901" y="413"/>
+            <point key="canvasLocation" x="1857" y="-955"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="jAt-wm-zDY">
