--- a/Sema/Controllers/SEFriendshipCell.xib
+++ b/Sema/Controllers/SEFriendshipCell.xib
@@ -6,38 +6,47 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="76" id="bBh-T5-AJF" customClass="SEFriendshipCell">
-            <rect key="frame" x="0.0" y="0.0" width="346" height="76"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="40" id="bBh-T5-AJF" customClass="SEFriendshipCell">
+            <rect key="frame" x="0.0" y="0.0" width="346" height="40"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bBh-T5-AJF" id="a6R-rX-274">
-                <rect key="frame" x="0.0" y="0.0" width="346" height="75"/>
+                <rect key="frame" x="0.0" y="0.0" width="346" height="39"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xi1-1n-GNO">
-                        <rect key="frame" x="82" y="25" width="248" height="25"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xi1-1n-GNO">
+                        <rect key="frame" x="259" y="7" width="47" height="25"/>
                         <fontDescription key="fontDescription" name="BradleyHandITCTT-Bold" family="Bradley Hand" pointSize="20"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" name="controlDarkShadowColor" catalog="System" colorSpace="catalog"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="ic_settings" translatesAutoresizingMaskIntoConstraints="NO" id="8HK-nG-uS7">
-                        <rect key="frame" x="16" y="13" width="50" height="50"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_person" translatesAutoresizingMaskIntoConstraints="NO" id="8HK-nG-uS7">
+                        <rect key="frame" x="40" y="9" width="22" height="22"/>
                     </imageView>
                 </subviews>
+                <color key="backgroundColor" red="0.90196078430000004" green="0.4941176471" blue="0.1333333333" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="xi1-1n-GNO" secondAttribute="trailing" constant="16" id="BBM-g4-KQk"/>
-                    <constraint firstItem="8HK-nG-uS7" firstAttribute="leading" secondItem="a6R-rX-274" secondAttribute="leading" constant="16" id="QpE-jw-Ti3"/>
+                    <constraint firstAttribute="trailing" secondItem="xi1-1n-GNO" secondAttribute="trailing" constant="40" id="BBM-g4-KQk"/>
+                    <constraint firstItem="8HK-nG-uS7" firstAttribute="leading" secondItem="a6R-rX-274" secondAttribute="leading" constant="40" id="QpE-jw-Ti3"/>
                     <constraint firstItem="xi1-1n-GNO" firstAttribute="centerY" secondItem="a6R-rX-274" secondAttribute="centerY" id="crI-os-Agp"/>
-                    <constraint firstItem="xi1-1n-GNO" firstAttribute="leading" secondItem="8HK-nG-uS7" secondAttribute="trailing" constant="16" id="hqB-Z7-IQe"/>
                     <constraint firstItem="8HK-nG-uS7" firstAttribute="centerY" secondItem="a6R-rX-274" secondAttribute="centerY" id="v2I-5o-anH"/>
                 </constraints>
+                <userDefinedRuntimeAttributes>
+                    <userDefinedRuntimeAttribute type="color" keyPath="layer.borderColor">
+                        <color key="value" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                    </userDefinedRuntimeAttribute>
+                    <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
+                        <integer key="value" value="10"/>
+                    </userDefinedRuntimeAttribute>
+                </userDefinedRuntimeAttributes>
             </tableViewCellContentView>
+            <color key="backgroundColor" name="controlDarkShadowColor" catalog="System" colorSpace="catalog"/>
             <connections>
                 <outlet property="loginLabel" destination="xi1-1n-GNO" id="VgI-KP-XMG"/>
             </connections>
-            <point key="canvasLocation" x="662" y="297"/>
+            <point key="canvasLocation" x="662" y="315"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="ic_settings" width="50" height="50"/>
+        <image name="ic_person" width="22" height="22"/>
     </resources>
 </document>
