--- a/Sema/Controllers/SERoomCell.xib
+++ b/Sema/Controllers/SERoomCell.xib
@@ -6,72 +6,84 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="140" id="Dr8-VN-44L" customClass="SERoomCell">
-            <rect key="frame" x="0.0" y="0.0" width="445" height="140"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="100" id="Dr8-VN-44L" customClass="SERoomCell">
+            <rect key="frame" x="0.0" y="0.0" width="445" height="108"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Dr8-VN-44L" id="BsQ-Rl-yqn">
-                <rect key="frame" x="0.0" y="0.0" width="445" height="139"/>
+                <rect key="frame" x="0.0" y="0.0" width="445" height="107"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_settings" translatesAutoresizingMaskIntoConstraints="NO" id="jaZ-32-r7k">
-                        <rect key="frame" x="24" y="45" width="50" height="50"/>
-                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="testowy" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Rx-Kv-DXC">
-                        <rect key="frame" x="354" y="16" width="67" height="27"/>
-                        <fontDescription key="fontDescription" name="BradleyHandITCTT-Bold" family="Bradley Hand" pointSize="20"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <rect key="frame" x="348" y="8" width="73" height="27"/>
+                        <fontDescription key="fontDescription" name="BradleyHandITCTT-Bold" family="Bradley Hand" pointSize="22"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Liczba graczy w pokoju:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="01H-09-vUj">
-                        <rect key="frame" x="179" y="59" width="184" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <rect key="frame" x="183" y="43" width="182" height="22"/>
+                        <fontDescription key="fontDescription" name="BradleyHandITCTT-Bold" family="Bradley Hand" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3bh-bQ-m0y">
-                        <rect key="frame" x="379" y="59" width="42" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <rect key="frame" x="381" y="43" width="40" height="22"/>
+                        <fontDescription key="fontDescription" name="BradleyHandITCTT-Bold" family="Bradley Hand" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iBi-aG-QeQ">
-                        <rect key="frame" x="379" y="104" width="42" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <rect key="frame" x="381" y="73" width="40" height="22"/>
+                        <fontDescription key="fontDescription" name="BradleyHandITCTT-Bold" family="Bradley Hand" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Kategoria:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mPB-oU-n9P">
-                        <rect key="frame" x="285" y="104" width="78" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <rect key="frame" x="288" y="73" width="77" height="22"/>
+                        <fontDescription key="fontDescription" name="BradleyHandITCTT-Bold" family="Bradley Hand" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_game" translatesAutoresizingMaskIntoConstraints="NO" id="jaZ-32-r7k">
+                        <rect key="frame" x="40" y="8" width="22" height="91"/>
+                    </imageView>
                 </subviews>
+                <color key="backgroundColor" red="0.90196078430000004" green="0.4941176471" blue="0.1333333333" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
                     <constraint firstItem="jaZ-32-r7k" firstAttribute="centerY" secondItem="BsQ-Rl-yqn" secondAttribute="centerY" id="19z-4V-MPo"/>
-                    <constraint firstItem="3bh-bQ-m0y" firstAttribute="top" secondItem="2Rx-Kv-DXC" secondAttribute="bottom" constant="16" id="2Uj-0Q-Ine"/>
+                    <constraint firstItem="3bh-bQ-m0y" firstAttribute="top" secondItem="2Rx-Kv-DXC" secondAttribute="bottom" constant="8" id="2Uj-0Q-Ine"/>
                     <constraint firstAttribute="trailing" secondItem="2Rx-Kv-DXC" secondAttribute="trailing" constant="24" id="3N5-Kc-K8z"/>
+                    <constraint firstAttribute="bottom" secondItem="jaZ-32-r7k" secondAttribute="bottom" constant="8" id="3UU-c8-QeD"/>
                     <constraint firstAttribute="trailing" secondItem="iBi-aG-QeQ" secondAttribute="trailing" constant="24" id="4kk-9g-nYM"/>
+                    <constraint firstAttribute="trailing" secondItem="jaZ-32-r7k" secondAttribute="trailing" constant="383" id="EMP-ff-DI0"/>
+                    <constraint firstItem="jaZ-32-r7k" firstAttribute="top" secondItem="BsQ-Rl-yqn" secondAttribute="top" constant="8" id="Heh-fv-xwu"/>
                     <constraint firstItem="iBi-aG-QeQ" firstAttribute="leading" secondItem="mPB-oU-n9P" secondAttribute="trailing" constant="16" id="eSt-Ws-Lhn"/>
-                    <constraint firstItem="jaZ-32-r7k" firstAttribute="leading" secondItem="BsQ-Rl-yqn" secondAttribute="leading" constant="24" id="eak-OQ-Wzf"/>
+                    <constraint firstItem="jaZ-32-r7k" firstAttribute="leading" secondItem="BsQ-Rl-yqn" secondAttribute="leading" constant="40" id="eak-OQ-Wzf"/>
                     <constraint firstItem="3bh-bQ-m0y" firstAttribute="leading" secondItem="01H-09-vUj" secondAttribute="trailing" constant="16" id="gm4-GH-viB"/>
                     <constraint firstItem="01H-09-vUj" firstAttribute="centerY" secondItem="BsQ-Rl-yqn" secondAttribute="centerY" id="ni3-nb-xGH"/>
-                    <constraint firstItem="iBi-aG-QeQ" firstAttribute="top" secondItem="3bh-bQ-m0y" secondAttribute="bottom" constant="24" id="oQp-wj-Ty1"/>
-                    <constraint firstItem="2Rx-Kv-DXC" firstAttribute="top" secondItem="BsQ-Rl-yqn" secondAttribute="top" constant="16" id="uG2-SM-rOX"/>
-                    <constraint firstItem="01H-09-vUj" firstAttribute="top" secondItem="2Rx-Kv-DXC" secondAttribute="bottom" constant="16" id="uum-NP-Zof"/>
-                    <constraint firstItem="mPB-oU-n9P" firstAttribute="top" secondItem="01H-09-vUj" secondAttribute="bottom" constant="24" id="xHd-b5-CkH"/>
+                    <constraint firstItem="iBi-aG-QeQ" firstAttribute="top" secondItem="3bh-bQ-m0y" secondAttribute="bottom" constant="8" id="oQp-wj-Ty1"/>
+                    <constraint firstItem="2Rx-Kv-DXC" firstAttribute="top" secondItem="BsQ-Rl-yqn" secondAttribute="top" constant="8" id="uG2-SM-rOX"/>
+                    <constraint firstItem="01H-09-vUj" firstAttribute="top" secondItem="2Rx-Kv-DXC" secondAttribute="bottom" constant="8" id="uum-NP-Zof"/>
+                    <constraint firstItem="mPB-oU-n9P" firstAttribute="top" secondItem="01H-09-vUj" secondAttribute="bottom" constant="8" id="xHd-b5-CkH"/>
                     <constraint firstAttribute="trailing" secondItem="3bh-bQ-m0y" secondAttribute="trailing" constant="24" id="ysz-gx-8Oh"/>
                 </constraints>
             </tableViewCellContentView>
+            <inset key="separatorInset" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
+            <userDefinedRuntimeAttributes>
+                <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
+                    <integer key="value" value="2"/>
+                </userDefinedRuntimeAttribute>
+                <userDefinedRuntimeAttribute type="color" keyPath="layer.borderColor">
+                    <color key="value" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                </userDefinedRuntimeAttribute>
+            </userDefinedRuntimeAttributes>
             <connections>
                 <outlet property="categoryNameLabel" destination="iBi-aG-QeQ" id="0Ka-DU-LQc"/>
                 <outlet property="roomNameLabel" destination="2Rx-Kv-DXC" id="vpX-bJ-s8X"/>
                 <outlet property="usersInRoomLabel" destination="3bh-bQ-m0y" id="ObA-pp-Izo"/>
             </connections>
-            <point key="canvasLocation" x="377.5" y="355"/>
+            <point key="canvasLocation" x="377.5" y="371"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="ic_settings" width="50" height="50"/>
+        <image name="ic_game" width="22" height="22"/>
     </resources>
 </document>
