--- a/Sema/Controllers/SERoomUserCell.xib
+++ b/Sema/Controllers/SERoomUserCell.xib
@@ -13,31 +13,32 @@
                 <rect key="frame" x="0.0" y="0.0" width="355" height="59"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3U7-BX-8cT">
-                        <rect key="frame" x="90" y="19" width="42" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RDr-7C-KIf">
+                        <rect key="frame" x="40" y="8" width="275" height="43"/>
+                        <color key="backgroundColor" red="0.27572983503341675" green="0.62328392267227173" blue="0.51743841171264648" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <fontDescription key="fontDescription" name="BradleyHandITCTT-Bold" family="Bradley Hand" pointSize="20"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                <integer key="value" value="10"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_settings" translatesAutoresizingMaskIntoConstraints="NO" id="b20-8z-eIg">
-                        <rect key="frame" x="24" y="8" width="50" height="43"/>
-                    </imageView>
                 </subviews>
+                <color key="backgroundColor" red="0.90196078430000004" green="0.4941176471" blue="0.1333333333" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
-                    <constraint firstItem="b20-8z-eIg" firstAttribute="centerY" secondItem="DnG-es-JzB" secondAttribute="centerY" id="0Lg-7G-1eN"/>
-                    <constraint firstItem="b20-8z-eIg" firstAttribute="top" secondItem="DnG-es-JzB" secondAttribute="top" constant="8" id="5Fw-UE-Opl"/>
-                    <constraint firstItem="b20-8z-eIg" firstAttribute="leading" secondItem="DnG-es-JzB" secondAttribute="leading" constant="24" id="K0q-IC-d0t"/>
-                    <constraint firstItem="3U7-BX-8cT" firstAttribute="leading" secondItem="b20-8z-eIg" secondAttribute="trailing" constant="16" id="nFx-Zd-cVa"/>
-                    <constraint firstItem="3U7-BX-8cT" firstAttribute="centerY" secondItem="DnG-es-JzB" secondAttribute="centerY" id="wc1-lf-CZv"/>
+                    <constraint firstItem="RDr-7C-KIf" firstAttribute="top" secondItem="DnG-es-JzB" secondAttribute="top" constant="8" id="9ff-wA-4s5"/>
+                    <constraint firstAttribute="trailing" secondItem="RDr-7C-KIf" secondAttribute="trailing" constant="40" id="OYO-9D-q3H"/>
+                    <constraint firstAttribute="bottom" secondItem="RDr-7C-KIf" secondAttribute="bottom" constant="8" id="gr3-7J-DoQ"/>
+                    <constraint firstItem="RDr-7C-KIf" firstAttribute="centerY" secondItem="DnG-es-JzB" secondAttribute="centerY" id="hPs-Ko-ffp"/>
+                    <constraint firstItem="RDr-7C-KIf" firstAttribute="leading" secondItem="DnG-es-JzB" secondAttribute="leading" constant="40" id="udE-vq-Ult"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="loginLabel" destination="3U7-BX-8cT" id="xG0-iC-6F8"/>
+                <outlet property="loginLabel" destination="RDr-7C-KIf" id="XJa-u6-7gI"/>
             </connections>
             <point key="canvasLocation" x="620.5" y="293"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="ic_settings" width="50" height="50"/>
-    </resources>
 </document>
